cmake_minimum_required(VERSION 3.1...3.14)

project(chapter_20 LANGUAGES CXX)

set(CMAKE_CXX_FLAGS "-ltbb")

catch_add_test(buffers buffers.cpp)
add_executable(asio asio.cpp)
add_executable(name_resolution name_resolution.cpp)
add_executable(name_resolution_async name_resolution_async.cpp)
add_executable(connect connect.cpp)
add_executable(connect_async connect_async.cpp)
add_executable(web_request web_request.cpp)
add_executable(web_request_async web_request_async.cpp)
add_executable(web_request_async_multi web_request_async_multi.cpp)
add_executable(upper_echo_server upper_echo_server.cpp)
add_executable(upper_echo_server_async upper_echo_server_async.cpp)
add_executable(upper_echo_server_multi upper_echo_server_multi.cpp)
add_executable(udp_client udp_client.cpp)
add_executable(udp_server udp_server.cpp)
add_executable(exercise_20_1 exercise_20_1.cpp)
add_executable(exercise_20_2 exercise_20_2.cpp)
add_executable(exercise_20_3sync exercise_20_3sync.cpp)
add_executable(exercise_20_3async exercise_20_3async.cpp)
add_executable(exercise_20_4 exercise_20_4.cpp)

target_link_libraries(asio PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
target_link_libraries(name_resolution PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
target_link_libraries(name_resolution_async PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
target_link_libraries(connect PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
target_link_libraries(connect_async PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
target_link_libraries(web_request PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
target_link_libraries(web_request_async PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
target_link_libraries(web_request_async_multi PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
target_link_libraries(buffers PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
target_link_libraries(upper_echo_server PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
target_link_libraries(upper_echo_server_async PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
target_link_libraries(upper_echo_server_multi PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
target_link_libraries(udp_client PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
target_link_libraries(udp_server PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
target_link_libraries(exercise_20_1 PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
target_link_libraries(exercise_20_2 PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
target_link_libraries(exercise_20_3sync PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
target_link_libraries(exercise_20_3async PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
target_link_libraries(exercise_20_4 PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)