cmake_minimum_required(VERSION 3.1...3.14)

project(chapter_21 LANGUAGES CXX)

set(CMAKE_CXX_FLAGS "-ltbb")

add_executable(template template.cpp)
add_executable(atexit atexit.cpp)
add_executable(abort abort.cpp)
add_executable(exit exit.cpp)
#if(MSVC)
add_executable(quickexit quickexit.cpp)
#endif(MSVC)
add_executable(ping ping.cpp)
add_executable(getenv getenv.cpp)
add_executable(sigint sigint.cpp)
add_executable(dedication dedication.cpp)
add_executable(exercise_21_1 exercise_21_1.cpp)
add_executable(exercise_21_2 exercise_21_2.cpp)
add_executable(exercise_21_3 exercise_21_3.cpp)
add_executable(exercise_21_4 exercise_21_4.cpp)

#if(MSVC)
  add_executable(program_options program_options.cpp)
  target_link_libraries(program_options PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
  target_link_libraries(exercise_21_2 PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
  target_link_libraries(exercise_21_3 PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
  target_link_libraries(exercise_21_4 PRIVATE ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} tbb)
#endif(MSVC)
