cmake_minimum_required(VERSION 3.1...3.14)

project(chapter_6 LANGUAGES CXX)

add_executable(listing_6_4 listing_6_4.cpp)
add_executable(listing_6_5 listing_6_5.cpp)
add_executable(listing_6_7 listing_6_7.cpp)
add_executable(listing_6_11 listing_6_11.cpp)
add_executable(listing_6_13 listing_6_13.cpp)
add_executable(listing_6_15 listing_6_15.cpp)
add_executable(listing_6_17 listing_6_17.cpp)
add_executable(listing_6_18 listing_6_18.cpp)
add_executable(listing_6_33 listing_6_33.cpp)

#if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    add_executable(listing_6_21 listing_6_21.cpp)
    add_executable(listing_6_22 listing_6_22.cpp)
    target_compile_options(listing_6_21 PUBLIC -fconcepts -fconcepts-diagnostics-depth=3 -std=c++23)
    target_compile_options(listing_6_22 PUBLIC -fconcepts -fconcepts-diagnostics-depth=3 -std=c++23)
    # TODO:
    add_executable(listing_6_26 listing_6_26.cpp)
    target_compile_options(listing_6_26 PUBLIC -fconcepts -fconcepts-diagnostics-depth=3 -std=c++23)
#endif()

add_executable(exercise_6_1 exercise_6_1.cpp)
add_executable(exercise_6_2 exercise_6_2.cpp)
add_executable(exercise_6_3 exercise_6_3.cpp)
target_compile_options(exercise_6_3 PUBLIC -fconcepts-diagnostics-depth=3 -std=c++23)
add_executable(exercise_6_4 exercise_6_4.cpp)
add_executable(exercise_6_5 exercise_6_5.cpp)
add_executable(exercise_6_6 exercise_6_6.cpp)
target_compile_options(exercise_6_6 PUBLIC -std=c++23)
add_executable(exercise_6_7 exercise_6_7.cpp)
target_compile_options(exercise_6_7 PUBLIC -fconcepts -fconcepts-diagnostics-depth=3 -std=c++23)
