cmake_minimum_required(VERSION 3.1...3.14)

project("chapter_8" LANGUAGES CXX)

add_executable(listing_8_1.exe listing_8_1.cpp)
add_executable(listing_8_2.exe listing_8_2.cpp)
add_executable(listing_8_3.exe listing_8_3.cpp)
add_executable(listing_8_4.exe listing_8_4.cpp)
add_executable(listing_8_5.exe listing_8_5.cpp)
add_executable(listing_8_6.exe listing_8_6.cpp)
add_executable(listing_8_7.exe listing_8_7.cpp)
add_executable(listing_8_8.exe listing_8_8.cpp)
add_executable(listing_8_9.exe listing_8_9.cpp)
add_executable(listing_8_11.exe listing_8_11.cpp)
add_executable(listing_8_12.exe listing_8_12.cpp)
add_executable(listing_8_14.exe listing_8_14.cpp)
add_executable(listing_8_16.exe listing_8_16.cpp)
add_executable(listing_8_18.exe listing_8_18.cpp)
add_executable(listing_8_19.exe listing_8_19.cpp)
add_executable(listing_8_20.exe listing_8_20.cpp)
add_executable(listing_8_21.exe listing_8_21.cpp)
add_executable(listing_8_23.exe listing_8_23.cpp)
add_executable(listing_8_24.exe listing_8_24.cpp)
add_executable(listing_8_27.exe listing_8_27.cpp)
add_executable(listing_8_28.exe listing_8_28.cpp)
add_executable(listing_8_29.exe listing_8_29.cpp)
add_executable(listing_8_30.exe listing_8_30.cpp)
add_executable(listing_8_31.exe listing_8_31.cpp)
add_executable(listing_8_32.exe listing_8_32.cpp)

add_executable(exercise_8_1.exe exercise_8_1.cpp fibonacci.cpp fibonacci.h)
add_executable(exercise_8_2.exe exercise_8_1.cpp prime_numbers.cpp)
add_executable(exercise_8_3.exe exercise_8_3.cpp)



